Bug 785805 - Segmentation fault when calling %ThrowError for message with three arguments. r=tschneidereit